注解路由，API文档生成
