# controllers/language.go
@@ -16,6 +16,13 @@ type Language struct {
 //beego.Router("/getLanguageList", &controllers.Language{}, "get:GetLanguageList")
 //beego.Router("/editLanguage", &controllers.Language{}, "post:Edit")
 
+// @Title Edit
+// @Description 语言编辑或者新增
+// @Param languageTitle query string "语言标题"
+// @Param languageContent query string "语言简介"
+// @Success 200 true
+// @Failure nil
+// @router /editLanguage [post]
 func (m *Language) Edit() {
 	language := models.NewLanguage()
 	data := m.Ctx.Input.RequestBody
@@ -33,6 +40,11 @@ func (m *Language) Edit() {
 	m.ServeJSON()
 }
 
+// @Title Edit
+// @Description 语言列表
+// @Success 200 list
+// @Failure nil
+// @router /getLanguageList [get]
 func (m *Language) GetLanguageList() {
 	language := models.NewLanguage()
 	id := m.User.UserId
